# days

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml
days_project/: asgi.py  settings.py  urls.py  wsgi.py
days_project/core/: constants.py  models.py  views.py
days_project/profile/: admin.py  apps.py  models.py  serializer.py  views.py
days_project/profile/migrations/: 0001_initial.py
days_project/stay/: admin.py  apps.py  models.py  serializer.py  views.py
days_project/stay/migrations/: 0001_initial.py  0002_initial.py
days_project/user/: admin.py  apps.py  models.py  serializer.py  views.py
days_project/user/migrations/: 0001_initial.py
