[tool.poetry]
name = "days"
version = "0.1.0"
description = ""
authors = ["Tim <yaxyzza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
environs = {extras = ["django"], version = "^11.0.0"}
mysqlclient = "^2.2.4"
pyproject-autoflake = "^1.0.2"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
